[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Joe_Engine"
version = "0.1.0"
description = "JOE Engine — 완전 독립 행성 탐색 엔진 (Macro Observer, PANGEA §4)"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["Joe_Engine*"]
